Bamflix - index.html(대문), 회원 로그인, 회원가입, 마이페이지 v1

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>로그인 페이지</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>로그인</title>
+  <link rel="stylesheet" th:href="@{/css/member/common.css}"/>
+  <link rel="stylesheet" th:href="@{/css/member/login-join.css}"/>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+<!-- header -->
+<!-- // header -->
+
+<div class="main">
+  <div class="container">
+    <h2 class="title">로그인</h2>
+    <p class="description">아이디와 비밀번호를 입력하고 로그인하세요</p>
+
+    <!-- 수정: onsubmit 이벤트 핸들러 제거 -->
+    <form class="login">
+      <div>
+        <label class="label-width" for="user-id">아이디</label>
+        <input type="text" id="user-id" name="loginId" required>
+      </div>
+      <div>
+        <label class="label-width" for="user-pw">비밀번호</label>
+        <input type="password" id="user-pw" name="password" required>
+      </div>
+      <div>
+        <input type="checkbox" id="save-id" name="saveId">
+        <label for="save-id">아이디 저장</label>
+      </div>
+      <button class="submit-button" type="button" onclick="login()">로그인</button>
+    </form>
+    <a class="signup-button" th:href="@{/signup}">회원가입</a>
+  </div>
+</div>
+
+<!-- footer -->
+<p class="footer">Copyright 2023. Bamflix All rights reserved.</p>
+<!-- //footer -->
+
+<script th:src="@{/js/function.js}"></script>
+<script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+<script>
+  // Enter 로그인 이벤트 바인딩
+  window.onload = () => {
+    document.querySelectorAll('#loginId, #password').forEach(element => {
+      element.addEventListener('keyup', (e) => {
+        if (e.keyCode === 13) {
+          login();
+        }
+      })
+    })
+  }
+
+  // 로그인
+  function login() {
+    console.log("login function called")
+    const form = document.querySelector('.login');
+
+    if (!form.loginId.value || !form.password.value) {
+      alert('아이디와 비밀번호를 모두 입력해 주세요.');
+      form.loginId.focus();
+      return false;
+    }
+
+    $.ajax({
+      url: '/login',
+      type: 'POST',
+      dataType: 'json',
+      data: {
+        loginId: form.loginId.value,
+        password: form.password.value
+      },
+      async: false,
+      success: function (response) {
+        location.href = '/';
+      },
+      error: function (request, status, error) {
+        alert('아이디와 비밀번호를 확인해 주세요.');
+      }
+    })
+  }
+</script>
 
 </body>
 </html>
