--- a/src/main/resources/static/css/member/login-join.css
+++ b/src/main/resources/static/css/member/login-join.css
@@ -33,7 +33,7 @@
 .submit-button {
   width: 100%;
   height: 40px;
-  background-color: royalblue;
+  background-color: #ff0000;
   color: white;
   border-width: 0;
   border-radius: 4px;
