--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -5,84 +5,84 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입</title>
-  <link rel="stylesheet" th:href="@{/css/member/common.css}"/>
-  <link rel="stylesheet" th:href="@{/css/member/login-join.css}"/>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <link rel="stylesheet" th:href="@{/css/index/css/bootstrap.min.css}"/>
+  <link rel="stylesheet" th:href="@{/css/index/css/signup-style.css}"/>
 </head>
 
 <body>
-<!-- header -->
-<!-- // header -->
+<main class="container-fluid">
+  <!---->
+  <section id="backGround">
+    <div class="container-fluid relative">
+      <header>
+        <img th:src="@{/css/index/img/logo-Netflix.png}" alt="Responsive image LOGO"
+             class="img-fluid"/>
+      </header>
+    </div>
+    <div class="jumbotron jumbotron-fluid relative mt-5">
+      <h1>Welcome to 🌰flix</h1>
+      <p class="lead">밤플릭스는 1인 시청자를 위한 착한 곳</p>
+    </div>
+  </section>
 
-<div class="main">
-  <div class="container">
-    <h2 class="title">회원가입</h2>
-    <p class="description">
-      원활한 서비스를 이용을 위해 회원가입을 해주세요
-    </p>
+  <div class="main">
+    <div class="container">
+      <h2 class="title">회원가입</h2>
+      <p class="description">
+        원활한 서비스를 이용을 위해 회원가입을 해주세요
+      </p>
 
-    <form class="login" onsubmit="return saveMember(this);">
-      <div>
-        <label class="label-width" for="user-id">아이디</label>
-        <input type="text" id="user-id" name="loginId" required>
-        <button type="button" id="idCheckBtn" class="btn" onclick="checkLoginId();"
-                style="width: 20%; float: right;">중복 확인
-        </button>
-      </div>
+      <form class="login" onsubmit="return saveMember(this);">
+        <div class="form-group">
+          <input type="text" id="user-id" name="loginId" class="form-control" placeholder="아이디" required>
+          <button type="button" id="idCheckBtn" class="btn btn-primary" onclick="checkLoginId();">중복
+            확인
+          </button>
+        </div>
 
-      <div>
-        <label class="label-width" for="user-pw">비밀번호</label>
-        <input type="password" id="user-pw" name="password" required>
-      </div>
+        <div class="form-group">
+          <input type="password" id="user-pw" name="password" class="form-control" placeholder="비밀번호" required >
+        </div>
 
-      <div>
-        <label class="label-width" for="user-pw-check">비밀번호 확인</label>
-        <input type="password" id="user-pw-check" name="passwordCheck" required>
-      </div>
+        <div class="form-group">
+          <input type="password" id="user-pw-check" name="passwordCheck" placeholder="비밀번호 확인" class="form-control"
+                 required>
+        </div>
 
-      <div>
-        <label class="label-width" for="user-name">이름</label>
-        <input type="text" id="user-name" name="name" required>
-      </div>
+        <div class="form-group">
+          <input type="text" id="user-name" name="name" class="form-control" placeholder="이름" required>
+        </div>
 
-      <div>
-        <label class="label-width" for="user-email">이메일</label>
-        <input type="email" id="user-email" name="email" required>
-      </div>
+        <div class="form-group">
+          <input type="email" id="user-email" name="email" class="form-control" placeholder="이메일" required>
+        </div>
 
-      <div>
-        <label class="label-width" for="user-phone">휴대폰번호</label>
-        <input type="text" id="user-phone" name="phone" required>
-      </div>
+        <div class="form-group">
+          <input type="text" id="user-phone" name="phone" class="form-control"placeholder="휴대폰번호" required>
+        </div>
 
-      <div>
-        <label class="label-width" for="user-birth">생년월일</label>
-        <input type="number" id="user-birth" name="birthday" placeholder="숫자 8자리 입력"/>
-      </div>
+        <div class="form-group">
+          <input type="number" id="user-birth" name="birthday" class="form-control"
+                 placeholder="생년월일 : 숫자 8자리 입력"/>
+        </div>
 
-      <fieldset class="field">
-        <legend>성별</legend>
-        <ul>
-          <li>
-            <input name="gender" type="radio" id="gender1" value="M">
-            <label for="gender1">남성</label>
-          </li>
-          <li>
-            <input name="gender" type="radio" id="gender2" value="F">
-            <label for="gender2">여성</label>
-          </li>
-        </ul>
-      </fieldset>
+        <div class="form-group">
+          <label class="form-check-label" for="gender1">남성</label>
+          <input type="radio" name="gender" id="gender1" value="M">
+          <label class="form-check-label" for="gender2">여성</label>
+          <input type="radio" name="gender" id="gender2" value="F">
+        </div>
 
-      <button class="submit-button" type="submit">회원가입</button>
-    </form>
+        <button class="btn btn-primary submit-button" type="submit">회원가입</button>
+      </form>
+
+    </div>
   </div>
-</div>
+</main>
 
-<!-- footer -->
-<p class="footer">Copyright 2023. Bamflix All rights reserved.</p>
-<!-- //footer -->
-
+<script th:src="@{/index/js/main.js/}"></script>
+<script th:src="@{/index/js/bootstrap.bundle.min.js/}"></script>
 <script th:src="@{/js/function.js}"></script>
 <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
 <script>
