Bamflix - main.html (컨텐츠 메인) 작성 v1

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -89,7 +89,7 @@
       },
       async: false,
       success: function (response) {
-        location.href = '/';
+        location.href = '/main';
       },
       error: function (request, status, error) {
         alert('아이디와 비밀번호를 확인해 주세요.');
