--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -49,6 +49,26 @@
       margin-top: 20px; /* 원하는 여백 크기 */
     }
 
+    /* 캐러셀 컨트롤 버튼 배경색과 테두리 제거 */
+    .carousel-control-prev,
+    .carousel-control-next {
+      background-color: transparent; /* 배경색 투명으로 설정 */
+      border: none; /* 테두리 없애기 */
+    }
+
+    /* 캐러셀 컨트롤 버튼 아이콘 스타일 수정 */
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+      background-color: transparent; /* 배경색 투명으로 설정 */
+      border: none; /* 테두리 없애기 */
+    }
+
+    /* 캐러셀 컨트롤 버튼 호버 시 아이콘 스타일 수정 */
+    .carousel-control-prev:hover .carousel-control-prev-icon,
+    .carousel-control-next:hover .carousel-control-next-icon {
+      background-color: transparent; /* 배경색 투명으로 설정 */
+      border: none; /* 테두리 없애기 */
+    }
   </style>
 </head>
 <body>
@@ -110,16 +130,47 @@
 <!--//네비게이션-->
 
 <main class="container-fluid">
-  <!---->
-  <section id="backGround">
-    <img th:src="@{/css/index/img/theglory.jpeg}" class="mainImage" alt="mainImage" width="1200"
-         height="600">
-  </section>
-  <!--//  -->
-
   <section>
     <!--캐러셀-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img th:src="@{/css/index/img/theglory.jpeg}" class="d-block w-100" alt="car1"
+               width="1200" height="600">
+        </div>
+        <div class="carousel-item">
+          <img th:src="@{/css/index/img/maskgirl.jpeg}" class="d-block w-100" alt="car2"
+               width="1200" height="600">
+        </div>
+        <div class="carousel-item">
+          <img th:src="@{/css/index/img/cellove.jpeg}" class="d-block w-100" alt="car3" width="1200"
+               height="600">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button"
+              data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button"
+              data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <!--//캐러셀-->
+  </section>
+
+  <section>
+
   </section>
 </main>
 
