--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -69,6 +69,15 @@
       background-color: transparent; /* 배경색 투명으로 설정 */
       border: none; /* 테두리 없애기 */
     }
+
+    /*  card 그룹 */
+    .card-group {
+      margin: 30px 15px 15px 15px;
+    }
+
+    .card-group > .card {
+      margin: 30px;
+    }
   </style>
 </head>
 <body>
@@ -170,7 +179,54 @@
   </section>
 
   <section>
-
+    <div class="card-group">
+      <div class="card">
+        <img th:src="@{/css/index/img/logo-Netflix.png}" class="card-img-top" alt=card1>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in
+            to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img th:src="@{/css/index/img/logo-Netflix.png}" class="card-img-top" alt="card2">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to
+            additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img th:src="@{/css/index/img/logo-Netflix.png}" class="card-img-top" alt="card3">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in
+            to additional content. This card has even longer content than the first to show that
+            equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img th:src="@{/css/index/img/logo-Netflix.png}" class="card-img-top" alt="card4">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in
+            to additional content. This card has even longer content than the first to show that
+            equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
 
