--- a/src/main/resources/templates/content/write.html
+++ b/src/main/resources/templates/content/write.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>write</title>
 </head>
-<body  align="center">
-<form method="post" action="/save">
+<body  align="center" >
+<form role="form" action="#" th:action="@{/save}" th:object="${contentRequest}" method="post" enctype="multipart/form-data">
   <table align="center">
     <tr>
       <td>title : </td>
-      <td><input type="text" id="title" name="title"></td>
+      <td><input type=“text” th:field=“${title}” /></td>
     </tr>
     <tr>
       <td>summary : </td>
-      <td><input type="text" id="summary" name="summary"></td>
+      <td><input type=“text” th:field=“${summary}” /></td>
     </tr>
     <tr>
       <td>originalUrl : </td>
-      <td><input type="text" id="originalUrl" name="originalUrl"></td>
+      <td><input type="file" id="originalUrl" name="originalUrl"></td>
     </tr>
     <tr>
       <td>createCountry : </td>
-      <td><input type="text" id="createCountry" name="createCountry"></td>
+      <td><input type=“text” th:field=“${createCountry}” /></td>
     </tr>
     <tr>
       <td>createYear : </td>
-      <td><input type="text" id="createYear" name="createYear"></td>
+      <td><input type=“text” th:field=“${createYear}” /></td>
     </tr>
     <tr>
       <td>director : </td>
-      <td><input type="text" id="director" name="director"></td>
+      <td><input type=“text” th:field=“${director}” /></td>
     </tr>
     <tr>
       <td>price : </td>
-      <td><input type="text" id="price" name="price"></td>
+      <td><input type=“text” th:field=“${price}” /></td>
     </tr>
     <tr>
       <td>is_subscribe_yn : </td>
-      <td><input type="text" id="isSubscribeYn" name="isSubscribeYn"></td>
+      <td><input type=“text” th:field=“${isSubscribeYn}” /></td>
     </tr>
   </table>
   <br><br>
 
   <button type="submit">ok</button>
+
 </form>
 </body>
+
 </html>
