복구중 v1 -DB저장된 구독권 조회 -조회된 구독권 결제화면 조회 -iamport api 구현중

--- a/src/main/resources/templates/order/subscription.html
+++ b/src/main/resources/templates/order/subscription.html
@@ -52,7 +52,7 @@
           </table>
           <br>
           <button type="submit">론리미엄 구독권 구매하기</button>
-          <a type="button" class="btn btn-danger" th:href="@{/order?from=subscriptionPage}">론리미엄 구독권 결제하기</a>
+          <a type="button" class="btn btn-danger" th:href="@{/order(from=subscriptionPage)}">론리미엄 구독권 결제하기</a>
         </form>
         <br>
         <a href="main.html" th:href="|@{/}|" style="font-size: small; color: dimgray">메인으로</a>
