--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -4,139 +4,141 @@
     <meta charset="UTF-8">
     <title>주문/결제 페이지</title>
 </head>
-<script src="https://cdn.iamport.kr/v1/iamport.js"></script>
+<script src="https://cdn.iamport.kr/v1/iamport.js" />
+
 <!--<script src="/js/order.js"></script>-->
 
-<script>
-    function payment(){
-        const data = {
-            merchant_uid: createOrderNum(),
-            name : getNames(),
-            amount : getAmount(),
-            buyer_email: document.querySelector("input[name=buyer_email]").value,
-            buyer_name: document.querySelector("input[name=buyer_name]").value,
-            buyer_tel: document.querySelector("input[name=buyer_phone]").value
-        }
+<!--<script>-->
+<!--    function payment(){-->
+<!--        const data = {-->
+<!--            merchant_uid: createOrderNum(),-->
+<!--            name : getNames(),-->
+<!--            amount : getAmount(),-->
+<!--            buyer_email: document.querySelector("input[name=buyer_email]").value,-->
+<!--            buyer_name: document.querySelector("input[name=buyer_name]").value,-->
+<!--            buyer_tel: document.querySelector("input[name=buyer_phone]").value-->
+<!--        }-->
 
-        requestPay(data);
-    }
+<!--        requestPay(data);-->
+<!--    }-->
 
-    function createOrderNum(){
-        const today = new Date();
-        const hours = today.getHours(); // 시
-        const minutes = today.getMinutes();  // 분
-        const seconds = today.getSeconds();  // 초
-        const milliseconds = today.getMilliseconds();
-        const makeMerchantUid = "IMP" + hours +  minutes + seconds + milliseconds;
+<!--    function createOrderNum(){-->
+<!--        const today = new Date();-->
+<!--        const hours = today.getHours(); // 시-->
+<!--        const minutes = today.getMinutes();  // 분-->
+<!--        const seconds = today.getSeconds();  // 초-->
+<!--        const milliseconds = today.getMilliseconds();-->
+<!--        const makeMerchantUid = "IMP" + hours +  minutes + seconds + milliseconds;-->
 
-        return makeMerchantUid;
-    }
+<!--        return makeMerchantUid;-->
+<!--    }-->
 
-    function getNames(){
-        const nameList = document.querySelectorAll("input[name=product_name]");
-        let names = "";
+<!--    function getNames(){-->
+<!--        const nameList = document.querySelectorAll("input[name=product_name]");-->
+<!--        let names = "";-->
 
-        nameList.forEach((name, index) => {
-            if(index === nameList.length -1){
-               names += name.value;
-            }else {
-                names += name.value + ", ";
-            }
-        });
+<!--        nameList.forEach((name, index) => {-->
+<!--            if(index === nameList.length -1){-->
+<!--               names += name.value;-->
+<!--            }else {-->
+<!--                names += name.value + ", ";-->
+<!--            }-->
+<!--        });-->
 
-        return names;
-    }
+<!--        return names;-->
+<!--    }-->
 
-    function getAmount(){
-        const amountList = document.querySelectorAll("input[name=product_price]");
-        let amounts = "";
+<!--    function getAmount(){-->
+<!--        const amountList = document.querySelectorAll("input[name=product_price]");-->
+<!--        let amounts = 0;-->
 
-        amountList.forEach((amount, index) => {
-            if(index === amountList.length -1){
-                amounts += amount.value;
-            }else {
-                amounts += amount.value + ", ";
-            }
-        });
+<!--        amountList.forEach((amount, index) => {-->
+<!--            if(index === amountList.length -1){-->
+<!--                amounts += amount.value;-->
+<!--            }else {-->
+<!--                amounts += amount.value + ", ";-->
+<!--            }-->
+<!--        });-->
 
-        return amounts;
-    }
+<!--        return amounts;-->
+<!--    }-->
 
-    var IMP = window.IMP;
-    IMP.init('imp00155867')
+<!--    var IMP = window.IMP;-->
+<!--    IMP.init('imp00155867')-->
 
-    function requestPay(data) {
-        IMP.request_pay({
-            pg : 'html5_inicis',
-            pay_method : 'card',
-            merchant_uid: data.merchant_uid,
-            name : data.name,
-            amount : data.amount,
-            buyer_email: data.buyer_email,
-            buyer_name: data.buyer_name,
-            buyer_tel: data.buyer_tel,
-            display: { card_quote: [3] }
-        }, function (rsp) { // callback
-            if (rsp.success) {
-                console.log(rsp);
-                //결제 성공시 로직
-                data.imp_uid = rsp.imp_uid;
-                data.merchant_uid = rsp.merchant_uid;
-                paymentComplete(data);
+<!--    function requestPay(data) {-->
+<!--        IMP.request_pay({-->
+<!--            pg : 'html5_inicis',-->
+<!--            pay_method : 'card',-->
+<!--            merchant_uid: data.merchant_uid,-->
+<!--            name : data.name,-->
+<!--            amount : data.amount,-->
+<!--            buyer_email: data.buyer_email,-->
+<!--            buyer_name: data.buyer_name,-->
+<!--            buyer_tel: data.buyer_tel,-->
+<!--            display: { card_quote: [3] }-->
+<!--        }, function (rsp) { // callback-->
+<!--            if (rsp.success) {-->
+<!--                console.log(rsp);-->
+<!--                //결제 성공시 로직-->
+<!--                data.imp_uid = rsp.imp_uid;-->
+<!--                data.merchant_uid = rsp.merchant_uid;-->
+<!--                paymentComplete(data);-->
 
-            } else {
-                console.log(rsp);
-                alert(`결제에 실패하였습니다. 에러 내용: ${rsp.error_msg}`);
-            }
-        });
-    }
+<!--            } else {-->
+<!--                console.log(rsp);-->
+<!--                alert(`결제에 실패하였습니다. 에러 내용: ${rsp.error_msg}`);-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
 
-    function paymentComplete(data){
+<!--    function paymentComplete(data){-->
 
-        $.ajax({
-            url: "/order/payment/complete",
-            method: "post",
-            headers: { "Content-Type": "application/json" },
-            data: data,
-        })
+<!--        $.ajax({-->
+<!--            url: "/order/payment/complete",-->
+<!--            method: "post",-->
+<!--            headers: { "Content-Type": "application/json" },-->
+<!--            data: data,-->
+<!--        })-->
 
-    }
 
-    function CheckOk(){
-        const agreeChk = document.getElementById('order_agreement');
-        const paymentChk = document.getElementsByName('payment');
+<!--    }-->
 
-        const is_checked = agreeChk.checked;
+<!--    function CheckOk(){-->
+<!--        const agreeChk = document.getElementById('order_agreement');-->
+<!--        const paymentChk = document.getElementsByName('payment');-->
 
-        var paymentType = null;
-        var idx = 0;
-        for(var i = 0; i < paymentChk.length; i++){
-            if(paymentChk[i].checked == true){
-                paymentType = paymentChk[i].value;
-                idx = i;
-            }
-        }
+<!--        const is_checked = agreeChk.checked;-->
 
-        if(paymentType === null){
-            alert("결제 수단을 선택하세요.")
-        }
+<!--        var paymentType = null;-->
+<!--        var idx = 0;-->
+<!--        for(var i = 0; i < paymentChk.length; i++){-->
+<!--            if(paymentChk[i].checked == true){-->
+<!--                paymentType = paymentChk[i].value;-->
+<!--                idx = i;-->
+<!--            }-->
+<!--        }-->
 
-        if(is_checked === false){
-            alert("주문 동의를 해야 결제 가능합니다.")
-        }else{
-            if(paymentChk[idx].value === "credit"){
-                payment();
-            }else{
-                paymentCash();
-            }
-        }
-    }
+<!--        if(paymentType === null){-->
+<!--            alert("결제 수단을 선택하세요.")-->
+<!--        }-->
 
-    function paymentCash(){
-        alert("현금결제입니다.");
-        location.href="/payment.html";
-    }
-</script>
+<!--        if(is_checked === false){-->
+<!--            alert("주문 동의를 해야 결제 가능합니다.")-->
+<!--        }else{-->
+<!--            if(paymentChk[idx].value === "credit"){-->
+<!--                payment();-->
+<!--            }else{-->
+<!--                paymentCash();-->
+<!--            }-->
+<!--        }-->
+<!--    }-->
+
+<!--    function paymentCash(){-->
+<!--        alert("현금결제입니다.");-->
+<!--        location.href="/payment.html";-->
+<!--    }-->
+<!--</script>-->
 
 <body>
 <h1>주문/결제 페이지입니다</h1>
@@ -147,7 +149,7 @@
     <table border="1">
         <tr>
             <td>구매자명</td>
-            <td colspan="4">
+            <td colspan="4" th:if="${loginMember != null}">
                 <span th:text="${loginMember.name}"></span>
                 <input type="hidden" name="buyer_name" th:value="${loginMember.name}">
                 <input type="hidden" name="buyer_email" th:value="${loginMember.email}">
@@ -203,5 +205,140 @@
     </button>
     <button type="button" onclick="CheckOk()">결제하기</button>
 </form>
+
+<!--<script th:src="@{/js/jquery-3.6.0.min.js}" />-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+
+    function CheckOk(){
+        const agreeChk = document.getElementById('order_agreement');
+        const paymentChk = document.getElementsByName('payment');
+
+        const is_checked = agreeChk.checked;
+
+        var paymentType = null;
+        var idx = 0;
+        for(var i = 0; i < paymentChk.length; i++){
+            if(paymentChk[i].checked == true){
+                paymentType = paymentChk[i].value;
+                idx = i;
+            }
+        }
+
+        if(paymentType === null){
+            alert("결제 수단을 선택하세요.")
+        }
+
+        if(is_checked === false){
+            alert("주문 동의를 해야 결제 가능합니다.")
+        }else{
+            if(paymentChk[idx].value === "credit"){
+                payment();
+            }else{
+                paymentCash();
+            }
+        }
+    }
+
+    function payment(){
+        const data = {
+            merchant_uid: createOrderNum(),
+            name : getNames(),
+            amount : getAmount(),
+            buyer_email: document.querySelector("input[name=buyer_email]").value,
+            buyer_name: document.querySelector("input[name=buyer_name]").value,
+            buyer_tel: document.querySelector("input[name=buyer_phone]").value
+        }
+
+        requestPay(data);
+    }
+
+    function createOrderNum(){
+        const today = new Date();
+        const hours = today.getHours(); // 시
+        const minutes = today.getMinutes();  // 분
+        const seconds = today.getSeconds();  // 초
+        const milliseconds = today.getMilliseconds();
+        const makeMerchantUid = "IMP" + hours +  minutes + seconds + milliseconds;
+
+        return makeMerchantUid;
+    }
+
+    function getNames(){
+        const nameList = document.querySelectorAll("input[name=product_name]");
+        let names = "";
+
+        nameList.forEach((name, index) => {
+            if(index === nameList.length -1){
+                names += name.value;
+            }else {
+                names += name.value + ", ";
+            }
+        });
+
+        return names;
+    }
+
+    function getAmount(){
+        const amountList = document.querySelectorAll("input[name=product_price]");
+        let amounts = 0;
+
+        amountList.forEach((amount, index) => {
+            if(index === amountList.length -1){
+                amounts += amount.value;
+            }else {
+                amounts += amount.value + ", ";
+            }
+        });
+
+        return amounts;
+    }
+
+    var IMP = window.IMP;
+    IMP.init('imp00155867')
+
+    function requestPay(data) {
+        IMP.request_pay({
+            pg : 'html5_inicis',
+            pay_method : 'card',
+            merchant_uid: data.merchant_uid,
+            name : data.name,
+            amount : data.amount,
+            buyer_email: data.buyer_email,
+            buyer_name: data.buyer_name,
+            buyer_tel: data.buyer_tel,
+            display: { card_quote: [3] }
+        }, function (rsp) { // callback
+            if (rsp.success) {
+                console.log("rsp : " + rsp);
+                //결제 성공시 로직
+                data.imp_uid = rsp.imp_uid;
+                data.merchant_uid = rsp.merchant_uid;
+                paymentComplete(data);
+
+            } else {
+                console.log("rsp : " + rsp);
+                alert(`결제에 실패하였습니다. 에러 내용: ${rsp.error_msg}`);
+            }
+        });
+    }
+
+    function paymentComplete(data){
+
+        $.ajax({
+            url: "/order/payment/complete",
+            method: "post",
+            headers: { "Content-Type": "application/json" },
+            data: data,
+        })
+    }
+
+
+    function paymentCash(){
+        alert("현금결제입니다.");
+        location.href="/order/payment/complete";
+    }
+</script>
+
 </body>
 </html>
