--- a/src/main/resources/templates/content/write.html
+++ b/src/main/resources/templates/content/write.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>write</title>
+  <meta charset="UTF-8">
+  <title>write</title>
 </head>
-<body  align="center" >
-<form role="form" action="#" th:action="@{/save}" th:object="${contentRequest}" method="post" enctype="multipart/form-data">
+<body align="center">
+<form th:action="@{/save}" method="post" enctype="multipart/form-data">
   <table align="center">
     <tr>
-      <td>title : </td>
-      <td><input type=“text” th:field=“${title}” /></td>
+      <td>title :</td>
+      <td><input type="text" id="title" name="title"></td>
     </tr>
     <tr>
-      <td>summary : </td>
-      <td><input type=“text” th:field=“${summary}” /></td>
+      <td>summary :</td>
+      <td><input type="text" id="summary" name="summary"></td>
     </tr>
     <tr>
-      <td>originalUrl : </td>
-      <td><input type="file" id="originalUrl" name="originalUrl"></td>
+      <td>Content Image Upload :</td>
+      <td><input type="file" id="imgFile" name="imgFile"></td>
     </tr>
     <tr>
-      <td>createCountry : </td>
-      <td><input type=“text” th:field=“${createCountry}” /></td>
+      <td>createCountry :</td>
+      <td><input type="text" id="createCountry" name="createCountry"></td>
     </tr>
     <tr>
-      <td>createYear : </td>
-      <td><input type=“text” th:field=“${createYear}” /></td>
+      <td>createYear :</td>
+      <td><input type="text" id="createYear" name="createYear"></td>
     </tr>
     <tr>
-      <td>director : </td>
-      <td><input type=“text” th:field=“${director}” /></td>
+      <td>director :</td>
+      <td><input type="text" id="director" name="director"></td>
     </tr>
     <tr>
-      <td>price : </td>
-      <td><input type=“text” th:field=“${price}” /></td>
+      <td>price :</td>
+      <td><input type="text" id="price" name="price"></td>
     </tr>
     <tr>
-      <td>is_subscribe_yn : </td>
-      <td><input type=“text” th:field=“${isSubscribeYn}” /></td>
+      <td>is_subscribe_yn :</td>
+      <td><input type="checkbox" id="is_subscribe_yn" name="isSubscribeYn" value="true"></td>
     </tr>
   </table>
   <br><br>
