-주문, 주문상세 구현중 -iamport api 구현중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,9 +30,9 @@
       <div th:unless="${loginMember != null}">
         <a type="button" class="btn btn-danger" th:href="@{/login}">Login</a>
       </div>
-      <div  th:unless="${loginMember == null}">
-        <a type="button" class="btn btn-danger" th:href="@{/subscription}">구독권 구매하기</a>
-      </div>
+<!--      <div  th:unless="${loginMember == null}">-->
+<!--        <a type="button" class="btn btn-danger" th:href="@{/subscription}">구독권 구매하기</a>-->
+<!--      </div>-->
     </div>
   </section>
   <!--------------03 equal section-->
