--- a/src/main/resources/templates/order/subscription.html
+++ b/src/main/resources/templates/order/subscription.html
@@ -1,46 +1,129 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-  <meta name="description"
-        content="Netflix,TV, PC, Mac, Mobile, Pad, Streaming"/>
-  <title>Bamflix Korea - subscription page</title>
-  <link rel="shortcut icon"
-        href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
-  <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/floating-labels/">
-
+  <title>홈 - 밤플릭스</title>
   <link rel="stylesheet" th:href="@{/css/index/css/bootstrap.min.css}"/>
-  <link rel="stylesheet" th:href="@{/css/index/css/style.css}"/>
+  <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <style>
+    .navbar {
+      background-color: transparent;
+    }
+
+    .navbar-brand img {
+      max-width: 100px;
+    }
+
+    .navbar-nav {
+      margin-right: auto;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+      color: white;
+      margin-left: 15px;
+    }
+
+    .navbar-light .navbar-nav .nav-link.active {
+      font-weight: bold;
+    }
+
+    .navbar-light .navbar-toggler-icon {
+      background-color: white; /* 햄버거 아이콘의 배경 색상을 흰색으로 설정 */
+    }
+
+    /* 화면 배경을 검정색으로 설정 */
+    body {
+      background-color: black;
+      color: white; /* 텍스트 색상을 흰색으로 설정 */
+    }
+  </style>
 </head>
 <script>
 </script>
 <body>
-<main class="container-fluid">
-  <!---->
-  <section id="backGround">
-    <div class="container-fluid relative">
-      <header>
-        <img th:src="@{/css/index/img/logo-Netflix.png}" alt="Responsive image LOGO"
-             class="img-fluid"/>
-      </header>
-    </div>
-    <div class="jumbotron jumbotron-fluid relative mt-5">
-      <h1>Welcome to 🌰flix</h1>
-      <p class="lead">밤플릭스는 1인 시청자를 위한 착한 곳</p>
-      <div th:unless="${loginMember == null}">
 
-      </div>
+<!--네비게이션-->
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid relative">
+    <a class="navbar-brand" href="#"><img th:src="@{/css/index/img/logo-Netflix.png}"
+                                          alt="Responsive image LOGO"/></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">시리즈</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">영화</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">내가 찜한 콘텐츠</a>
+        </li>
+        <li th:if="${loginMember != null}" class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+             data-bs-toggle="dropdown" aria-expanded="false">
+            안녕하세요, <span th:text="${loginMember.name}"></span> 님!
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" th:href="@{/mypage}" href="#">마이페이지</a></li>
+            <li>
+              <form class="dropdown-item" action="/logout" method="post">
+                <button class="logout-button" type="submit">로그아웃</button>
+              </form>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Something else Bam 🌰</a></li>
+          </ul>
+        </li>
+        <li th:unless="${loginMember != null}" class="nav-item">
+          <a class="nav-link" th:href="@{/login}">로그인</a>
+        </li>
+      </ul>
+
+      <form class="d-flex">
+        <div  th:unless="${loginMember == null}">
+          <a type="button" class="btn btn-danger" th:href="@{/subscription}">구독권 구매하기</a>
+        </div>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-  </section>
+  </div>
+</nav>
+<!--//네비게이션-->
+
   <!--------------03 equal section-->
   <section>
     <div class="container my-5">
       <div class="row">
         <form action="/order" method="post">
-          <table border="1" th:each="data : ${subscriptionList}">
+          <table border="1">
             <tr>
-              <td rowspan="3">우린 혼자여도 프리미엄 본다!</td>
+              <th>
+                <input type="checkbox" name="sub_chk_box" id="sub_chk_all" value=""> 전체선택
+              </th>
+              <th>구독권 정보</th>
+            </tr>
+            <div th:each="data : ${subscriptionList}">
+            <tr>
+              <td rowspan="3">
+                <input type="checkbox" name="sub_chk_box" id="sub_chk_num" value="">
+                우린 혼자여도 프리미엄 본다!
+                <input type="hidden" id="" name="" th:value="${data.id}">
+              </td>
               <td><span th:text="${data.name}"></span></td>
             </tr>
             <tr>
@@ -49,24 +132,20 @@
             <tr>
               <td>월 <span th:text="${data.price}"></span>원 /(<span th:text="${data.validityDays}"></span>일)</td>
             </tr>
+            </div>
           </table>
           <br>
-          <button type="submit">론리미엄 구독권 구매하기</button>
           <a type="button" class="btn btn-danger" th:href="@{/order(from=subscriptionPage)}">론리미엄 구독권 결제하기</a>
         </form>
         <br>
-        <a href="main.html" th:href="|@{/}|" style="font-size: small; color: dimgray">메인으로</a>
+        <a th:href="@{/main}" style="font-size: small; color: dimgray">메인으로</a>
       </div>
     </div>
   </section>
 </main>
 <!---footer---------->
-<footer class="page-footer font-small blue text-muted">
-  <div>
-    <p class="footer-copyright pt-5 pb-2 font-weight-lighter text-muted">
-      Copyright 2023. 🌰flix (Bamflix) All rights reserved.
-    </p>
-  </div>
+<footer class="footer text-center mt-5 text-muted">
+  <small>Copyright 2023. 🌰flix (Bamflix) All rights reserved.</small>
 </footer>
 <!---// footer---------->
 
