컨텐츠 디테일 페이지 (상세보기) 작성 v1

--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -210,7 +210,9 @@
   <section>
     <div class="card-group">
       <div class="card" th:each="content : ${contents}">
-        <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1>
+        <a th:href="@{/contentDetail(title=${content.title})}">
+          <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1>
+        </a>
         <!--        <div class="card-footer">-->
         <!--          <small class="text-muted" th:text="${content.title}">contents title</small>-->
         <!--        </div>-->
