--- a/src/main/resources/templates/content/write.html
+++ b/src/main/resources/templates/content/write.html
@@ -28,6 +28,14 @@
       <td><input type="text" id="createYear" name="createYear"></td>
     </tr>
     <tr>
+      <td>category : </td>
+      <td><input type="text" id="category" name="category"></td>
+    </tr>
+    <tr>
+      <td>genre : </td>
+      <td><input type="text" id="genre" name="genre"></td>
+    </tr>
+    <tr>
       <td>director :</td>
       <td><input type="text" id="director" name="director"></td>
     </tr>
