--- a/src/main/resources/templates/content/detail.html
+++ b/src/main/resources/templates/content/detail.html
@@ -8,16 +8,19 @@
 <body align="center">
 <form>
   <table border="1" align="center">
-    <tr th:each="cont : ${list}">
-      <td><span th:text="${cont.id}"></span></td>
-      <td><img th:src="@{${cont.getImgPath()}}"></td>
-      <td><span th:text="${cont.title}"></span></td>
-      <td><span th:text="${cont.summary}"></span></td>
-      <td><span th:text="${cont.uploadedAt}"></span></td>
-      <td><span th:text="${cont.createCountry}"></span></td>
-      <td><span th:text="${cont.createYear}"></span></td>
-      <td><span th:text="${cont.director}"></span></td>
-      <td><span th:text="${cont.price}"></span></td>
+    <tr th:each="content : ${contents}">
+      <td><span th:text="${content.id}"></span></td>
+<!--      <td><img th:src="@{${content.getImgPath()}}"></td>-->
+      <td><span th:text="${content.title}"></span></td>
+      <td><span th:text="${content.summary}"></span></td>
+      <td><span th:text="${content.imgPath}"></span></td>
+      <td><span th:text="${content.uploadedAt}"></span></td>
+      <td><span th:text="${content.createCountry}"></span></td>
+      <td><span th:text="${content.createYear}"></span></td>
+      <td><span th:text="${content.category}"></span></td>
+      <td><span th:text="${content.genre}"></span></td>
+      <td><span th:text="${content.director}"></span></td>
+      <td><span th:text="${content.price}"></span></td>
     </tr>
   </table>
 
