--- a/src/main/resources/templates/content/contentDetail.html
+++ b/src/main/resources/templates/content/contentDetail.html
@@ -109,8 +109,11 @@
         <div style="margin-top: 20px;">
             <button type="button" onclick="location.href='main.html'" th:onclick="|location.href='@{/main}'|">Play
             </button>
-            <button type="button" onclick="location.href='main.html'" th:onclick="|location.href='@{/main}'|">찜하기
-            </button>
+            <form th:action="@{/addToCart}" method="post">
+                <input type="hidden" name="contentId" th:value="${content.id}" />
+                <input type="hidden" name="memberId" th:value="${loginMember.id}" />
+                <button type="submit">찜하기</button>
+            </form>
             <button type="button" onclick="location.href='main.html'" th:onclick="|location.href='@{/main}'|">Main
             </button>
         </div>
